--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -1,8 +1,8 @@
     <div class="row">
-      <div class="col-xs-3">
+      <div class="col-sm-3">
         <label>Envoi Groupé : </label>
       </div>
-      <div class="col-xs-8">
+      <div class="col-sm-8">
       <input type="radio" name="groupe" value="yes" id="EnvGroupYes">
       <label for="EnvGroupYes">Oui</label>
       <input type="radio" name="groupe" value="no" id="EnvGroupNo">
@@ -11,19 +11,19 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-3">
+      <div class="col-sm-3">
         <label>Nombre de colis :</label>
       </div>
-      <div class="col-xs-8">
+      <div class="col-sm-8">
         <input type="number" name="nbColis" placeholder="XXX" min="2" max="10">
       </div>
     </div>
 
     <div class="row">
-        <div class="col-xs-3">
+        <div class="col-sm-3">
           <label>Déploiement : </label>
         </div>
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <input type="radio" name="deploiement" value="Yes" id="deploiementYes">
           <label for="deploiementYes">Oui</label>
           <input type="radio" name="deploiement" value="No" id="deploiementNo">
@@ -32,10 +32,10 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-3">
+      <div class="col-sm-3">
         <label>N° Devis : </label>
       </div>
-      <div class="col-xs-8">
+      <div class="col-sm-8">
         <input type="text" name="numeroDevis" placeholder="affichage bdd">
       </div>
     </div>
