--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -1,4 +1,4 @@
-    <div class="row">
+    <div class="row" id="envGroupRow">
       <div class="col-sm-3">
         <label>Envoi Groupé : </label>
       </div>
@@ -10,7 +10,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="nbColisRow">
       <div class="col-sm-3">
         <label>Nombre de colis :</label>
       </div>
