--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="numDevisRow">
       <div class="col-sm-3">
         <label>N° Devis : </label>
       </div>
