--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -3,9 +3,9 @@
         <label>Envoi Groupé : </label>
       </div>
       <div class="col-sm-6">
-      <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="block">
+      <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="block" data-divId="nbColisRow">
       <label for="EnvGroupYes">Oui</label>
-      <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none">
+      <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none" data-divId="nbColisRow">
       <label for="EnvGroupNo">Non</label>
       </div>
     </div>
@@ -24,9 +24,9 @@
           <label>Déploiement : </label>
         </div>
         <div class="col-sm-6">
-          <input type="radio" name="deploiement" value="Yes" id="deploiementYes" data-display="block">
+          <input type="radio" name="deploiement" value="Yes" id="deploiementYes" data-display="block" data-divId="numDevisRow">
           <label for="deploiementYes">Oui</label>
-          <input type="radio" name="deploiement" value="No" id="deploiementNo" data-display="none">
+          <input type="radio" name="deploiement" value="No" id="deploiementNo" data-display="none" data-divId="numDevisRow">
           <label for="deploiementNo">Non</label>
         </div>
     </div>
