--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -3,7 +3,7 @@
         <label>Envoi Groupé : </label>
       </div>
       <div class="col-sm-6">
-      <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="block" data-divId="nbColisRow">
+      <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="inline-block" data-divId="nbColisRow">
       <label for="EnvGroupYes">Oui</label>
       <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none" data-divId="nbColisRow">
       <label for="EnvGroupNo">Non</label>
@@ -24,7 +24,7 @@
           <label>Déploiement : </label>
         </div>
         <div class="col-sm-6">
-          <input type="radio" name="deploiement" value="Yes" id="deploiementYes" data-display="block" data-divId="numDevisRow">
+          <input type="radio" name="deploiement" value="Yes" id="deploiementYes" data-display="inline-block" data-divId="numDevisRow">
           <label for="deploiementYes">Oui</label>
           <input type="radio" name="deploiement" value="No" id="deploiementNo" data-display="none" data-divId="numDevisRow">
           <label for="deploiementNo">Non</label>
