--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -3,18 +3,18 @@
         <label>Envoi Groupé : </label>
       </div>
       <div class="col-sm-6">
-      <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="inline-block" data-divId="nbColisRow">
+      <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="inline-block" data-divId="nbColisRow" data-divname="contentNbColis">
       <label for="EnvGroupYes">Oui</label>
-      <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none" data-divId="nbColisRow">
+      <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none" data-divId="nbColisRow" data-divname="contentNbColis">
       <label for="EnvGroupNo">Non</label>
       </div>
     </div>
 
     <div class="row" id="nbColisRow">
-      <div class="col-sm-3">
+      <div class="col-sm-3" name="contentNbColis">
         <label>Nombre de colis :</label>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-6" name="contentNbColis">
         <input type="number" name="nbColis" placeholder="XXX" min="2" max="10">
       </div>
     </div>
