data display inline block to block

--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -3,7 +3,7 @@
         <label>Envoi Groupé : </label>
       </div>
       <div class="col-sm-6">
-      <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="inline-block" data-divId="nbColisRow" data-divname="contentNbColis">
+      <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="block" data-divId="nbColisRow" data-divname="contentNbColis">
       <label for="EnvGroupYes">Oui</label>
       <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none" data-divId="nbColisRow">
       <label for="EnvGroupNo">Non</label>
