add style.css + contentRow

--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -1,8 +1,8 @@
     <div class="row" id="envGroupRow">
-      <div class="col-sm-3">
+      <div class="col-sm-3 contentRow">
         <label>Envoi Groupé : </label>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-6 contentRow">
       <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="block" data-divId="nbColisRow" data-divname="contentNbColis">
       <label for="EnvGroupYes">Oui</label>
       <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none" data-divId="nbColisRow">
@@ -20,10 +20,10 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-3 contentRow">
           <label>Déploiement : </label>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 contentRow">
           <input type="radio" name="deploiement" value="Yes" id="deploiementYes" data-display="block" data-divId="numDevisRow" data-divname="contentNumDevis">
           <label for="deploiementYes">Oui</label>
           <input type="radio" name="deploiement" value="No" id="deploiementNo" data-display="none" data-divId="numDevisRow">
