div prix transporteur de sub_popup à sub_popup_Ext_Ret + modif div name de contentNbColis à contentEnvGroup

--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -3,7 +3,7 @@
         <label>Envoi Groupé : </label>
       </div>
       <div class="col-sm-6 contentRow">
-      <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="block" data-divId="nbColisRow" data-divname="contentNbColis">
+      <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="block" data-divId="nbColisRow" data-divname="contentEnvGroup">
       <label for="EnvGroupYes">Oui</label>
       <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none" data-divId="nbColisRow">
       <label for="EnvGroupNo">Non</label>
@@ -11,12 +11,20 @@
     </div>
 
     <div class="row" id="nbColisRow">
-      <div class="col-sm-3" name="contentNbColis">
+      <div class="col-sm-3" name="contentEnvGroup">
         <label>Nombre de colis :</label>
       </div>
-      <div class="col-sm-6" name="contentNbColis">
+      <div class="col-sm-6" name="contentEnvGroup">
         <input type="number" name="nbColis" placeholder="XXX" min="2" max="10">
       </div>
+
+        <div class="col-sm-3 contentRow" name="contentEnvGroup">
+          <label>Prix Transporteur</label>
+        </div>
+        <div class="col-sm-6 contentRow" name="contentEnvGroup">
+          <input type="text" name="prixTransporteur" placeholder="XXX €">
+        </div>
+
     </div>
 
     <div class="row">
