changement affichage à input pour num devis

--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -28,7 +28,7 @@
       <input type="text" name="prixTransporteur" placeholder="XXX €">
     </div>
   </div>
-  
+
 </div>
 
 
@@ -49,6 +49,6 @@
     <label>N° Devis : </label>
   </div>
   <div class="col-sm-6" name="contentNumDevis">
-    <input type="text" name="numeroDevis" placeholder="affichage bdd">
+    <input type="text" name="numeroDevis" placeholder="123456789">
   </div>
 </div>
