ajout 5% margin left row + align center pour bouton //cassé

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,12 @@
 .row{
   display: block;
+  margin-left: 5%;
 }
 
 .contentRow{
   display: inline-block;
+}
+
+.btn-primary{
+justify-content: center;
 }
