test modal test popup test bootstrap

--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -49,6 +49,6 @@
     <label>N° Devis : </label>
   </div>
   <div class="col-sm-6" name="contentNumDevis">
-    <input type="text" name="numeroDevis" placeholder="123456789">
+    <input type="text" name="numeroDevis" placeholder="123456">
   </div>
 </div>
