--- a/src/style.css
+++ b/src/style.css
@@ -4,3 +4,12 @@
 .modal-body{
   padding: 40px 50px;
 }
+.modal-header, h4, .close {
+    background-color: #5cb85c;
+    color:white !important;
+    text-align: center;
+    font-size: 30px;
+}
+.modal-footer {
+    background-color: #f9f9f9;
+}
