--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -28,7 +28,6 @@
       <input type="number" name="contentEnvGroup" placeholder="XXX €">
     </div>
   </div>
-
 </div>
 
 
@@ -37,9 +36,9 @@
     <label>Déploiement : </label>
   </div>
   <div class="col-sm-6 contentRow">
-    <input type="radio" name="deploiement" value="Yes" id="deploiementYes" data-display="block" data-divId="numDevisRow" data-divname="contentNumDevis">
+    <input type="radio" name="deploiement" value="yes" id="deploiementYes" data-display="block" data-divId="numDevisRow" data-divname="contentNumDevis">
     <label for="deploiementYes" required >Oui</label>
-    <input type="radio" name="deploiement" value="No" id="deploiementNo" data-display="none" data-divId="numDevisRow" data-divname="contentNumDevis">
+    <input type="radio" name="deploiement" value="no" id="deploiementNo" data-display="none" data-divId="numDevisRow" data-divname="contentNumDevis">
     <label for="deploiementNo" required >Non</label>
   </div>
 </div>
