--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -1,8 +1,8 @@
 <div class="row" id="envGroupRow">
-  <div class="col-sm-3 contentRow">
+  <div class="col-sm-3 ">
     <label>Envoi Groupé : </label>
   </div>
-  <div class="col-sm-6 contentRow">
+  <div class="col-sm-6 ">
     <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="block" data-divId="nbColisRow" data-divname="contentEnvGroup" required>
     <label for="EnvGroupYes">Oui</label>
     <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none" data-divId="nbColisRow" data-divname="contentEnvGroup" required>
@@ -21,10 +21,10 @@
   </div>
 
   <div class="row">
-    <div class="col-sm-3 contentRow" >
+    <div class="col-sm-3 " >
       <label>Prix Transporteur</label>
     </div>
-    <div class="col-sm-6 contentRow" >
+    <div class="col-sm-6 " >
       <input type="number" name="contentEnvGroup" placeholder="XXX €">
     </div>
   </div>
@@ -32,10 +32,10 @@
 
 
 <div class="row">
-  <div class="col-sm-3 contentRow">
+  <div class="col-sm-3 ">
     <label>Déploiement : </label>
   </div>
-  <div class="col-sm-6 contentRow">
+  <div class="col-sm-6 ">
     <input type="radio" name="deploiement" value="yes" id="deploiementYes" data-display="block" data-divId="numDevisRow" data-divname="contentNumDevis">
     <label for="deploiementYes" required >Oui</label>
     <input type="radio" name="deploiement" value="no" id="deploiementNo" data-display="none" data-divId="numDevisRow" data-divname="contentNumDevis">
