name contentEnvGroup to NbColis et prixTransporteur
et js if supplémentaire pour attr required and removeAttr

--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -16,7 +16,7 @@
       <label>Nombre de colis :</label>
     </div>
     <div class="col-sm-6" >
-      <input type="number" name="contentEnvGroup" placeholder="XXX" min="2" max="10">
+      <input type="number" name="NbColis" placeholder="XXX" min="2" max="10">
     </div>
   </div>
 
@@ -25,7 +25,7 @@
       <label>Prix Transporteur</label>
     </div>
     <div class="col-sm-6 " >
-      <input type="number" name="contentEnvGroup" placeholder="XXX €">
+      <input type="number" name="prixTransporteur" placeholder="XXX €">
     </div>
   </div>
 </div>
