sub_popup_exp_ret.php : change data divname to NbColis (liés dynamiquement)

--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -3,9 +3,9 @@
     <label>Envoi Groupé : </label>
   </div>
   <div class="col-sm-6 ">
-    <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="block" data-divId="nbColisRow" data-divname="contentEnvGroup" required>
+    <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="block" data-divId="nbColisRow" data-divname="NbColis" required>
     <label for="EnvGroupYes">Oui</label>
-    <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none" data-divId="nbColisRow" data-divname="contentEnvGroup" required>
+    <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none" data-divId="nbColisRow" data-divname="NbColis" required>
     <label for="EnvGroupNo">Non</label>
   </div>
 </div>
