--- a/includes/html/sub_popup_Exp_Ret.html
+++ b/includes/html/sub_popup_Exp_Ret.html
@@ -1,8 +1,8 @@
 <div class="row" id="envGroupRow">
-  <div class="col-sm-3 ">
+  <div class="col-xs-3 ">
     <label>Envoi Groupé : </label>
   </div>
-  <div class="col-sm-6 ">
+  <div class="col-xs-6 ">
     <input type="radio" name="groupe" value="yes" id="EnvGroupYes" data-display="block" data-divId="nbColisRow" data-divname="NbColis" required>
     <label for="EnvGroupYes">Oui</label>
     <input type="radio" name="groupe" value="no" id="EnvGroupNo" data-display="none" data-divId="nbColisRow" data-divname="NbColis" required>
@@ -12,20 +12,20 @@
 
 <div id="nbColisRow">
   <div class="row" >
-    <div class="col-sm-3" >
+    <div class="col-xs-3" >
       <label>Nombre de colis :</label>
     </div>
-    <div class="col-sm-6" >
+    <div class="col-xs-6" >
       <input type="number" name="NbColis" placeholder="XXX" min="2" max="10">
     </div>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-sm-3 ">
+  <div class="col-xs-3 ">
     <label>Déploiement : </label>
   </div>
-  <div class="col-sm-6 ">
+  <div class="col-xs-6 ">
     <input type="radio" name="deploiement" value="yes" id="deploiementYes" data-display="block" data-divId="numDevisRow" data-divname="contentNumDevis">
     <label for="deploiementYes" required >Oui</label>
     <input type="radio" name="deploiement" value="no" id="deploiementNo" data-display="none" data-divId="numDevisRow" data-divname="contentNumDevis">
@@ -34,10 +34,10 @@
 </div>
 
 <div class="row" id="numDevisRow">
-  <div class="col-sm-3" >
+  <div class="col-xs-3" >
     <label>N° Devis : </label>
   </div>
-  <div class="col-sm-6" >
+  <div class="col-xs-6" >
     <input type="text" name="contentNumDevis" placeholder="123456">
   </div>
 </div>
